--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -59,6 +59,9 @@ crossorigin="anonymous">
 					<div class="form-group">
 						<span>If you are a new user <a th:href="@{/registry}">register here</a></span>
 					</div>
+					<div class="form-group">
+						<span>If you want to log in with your GitHub account <a th:href="https://github.com/login/oauth2/authorize?client_id=Ov23liPlkNVvtVEKgmYv&redirect_uri=https://coffeeshopfinder-aeb0c911fd65.herokuapp.com/oauth2/callback">click here</a></span>
+					</div>
 				</div>
 			</div>
 		</div>
